# Django

./: .gitignore  UserModel.md  WebSocket.md  test.py  test2.py
DRF/: pyproject.toml
DRF/booksproject/: db.sqlite3
DRF/booksproject/books/: urls.py  views.py
DRF/booksproject/books/migrations/: 0001_initial.py
DRF/booksproject/booksproject/: asgi.py  settings.py  urls.py  wsgi.py
DRF/booksproject/comment/: serializers.py
DRF/booksproject/genericviewstrial/: apps.py
DRF/booksproject/serializertrial/: apps.py  models.py
DRF/booksproject/serializertrial/migrations/: 0001_initial.py
RedisTrial/: pyproject.toml
RedisTrial/core/: db.sqlite3
RedisTrial/core/core/: settings.py  urls.py
RedisTrial/core/src/: admin.py  models.py  urls.py  views.py
admin/: pyproject.toml
admin/admin_trial/: manage.py
admin/admin_trial/admin_trial/: asgi.py  settings.py  urls.py  wsgi.py
celerytrial/: README.md  main.py  pyproject.toml
custom_management/: main.py  pyproject.toml
custom_management/custom/: db.sqlite3
gRPC/: client.py  main.py  pyproject.toml  users.proto  users_pb2.py  users_pb2_grpc.py
graphql/: pyproject.toml
graphql/booksproject/: db.sqlite3
openapitrial/: main.py  pyproject.toml
openapitrial/core/: db.sqlite3
permission/: main.py  pyproject.toml
permission/permissiontrial/: db.sqlite3  manage.py  practice code.py
prometheus/: README.md  docker-compose.yaml  main.py  pyproject.toml
prometheus/prometheus/: db.sqlite3
pubsubtrial/: main.py  pyproject.toml
websocket/: pyproject.toml
websocket/myproject/: db.sqlite3
(+52 files in other folders)
